--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tesla</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -28,9 +29,9 @@
             <div class="header-content">
                 <h1 class="header-content__title">Roadster</h1>
                 <div class="header-content__text">
-                    The fastest car in the world, beautiful and powerful
+                    Самый быстрый автомобиль в мире, с рекордным ускорением, дальностью и производительностью.
                 </div>
-                <a class="action-btn" href="#">Test Drive</a>
+                <a class="action-btn" href="#">Хочу тест драйв</a>
             </div>
         </div>
 
