--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section class="video">
         <div class="container">
-            <img src="images/car-img.jpg" alt="tesla photo">
+            <iframe width="100%" height="400" src="https://www.youtube.com/embed/tw4jkyfY4HE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 
