--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="header-content">
                 <h1 class="header-content__title">Roadster</h1>
                 <div class="header-content__text">
-                    Самый быстрый автомобиль в мире, с рекордным ускорением, дальностью и производительностью.
+                    Самый быстрый автомобиль в мире, с рекордным ускорением, дальностью и прекрасной производительностью.
                 </div>
                 <a class="action-btn" href="#">Хочу тест драйв</a>
             </div>
