feat: adaptive version

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <img src="images/advantages-1.jpg " alt="tesla photo ">
                 </div>
             </div>
-            <div class="advantages__row ">
+            <div class="advantages__row advantages__row--mobile">
                 <div class="advantages__images ">
                     <img src="images/advantages-2.jpg " alt="tesla photo ">
                 </div>
